# Minuet

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  MIGRATION.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: binding_throughput.rs  capacity_scaling.rs  holographic_ops.rs  parallel_ops.rs  retrieval_latency.rs
docs/: API.md  GHRR-implementation-plan.md  ROADMAP.md
examples/: code_semantic_search.rs  compose_pipeline.rs  molecular_analogy.rs  motor_primitives.rs  optical_expressions_demo.rs  optical_fingerprint_demo.rs  optical_memory_demo.rs  simple_memory.rs  working_memory_agent.rs
scripts/: install-hooks.sh  pre-commit
src/: algebra.rs  error.rs  lib.rs  traits.rs
src/binding/: algebra.rs  codebook.rs  mod.rs  transform.rs
src/capacity/: mod.rs
src/domains/: geometric.rs  mod.rs  molecular.rs  symbolic.rs
src/encoding/: codebook.rs  mod.rs
src/gpu/: buffers.rs  dispatch.rs  kernels.rs  mod.rs
src/memory/: capacity.rs  mod.rs  query.rs  store.rs  trace.rs
src/optical/: checkpoint.rs  fingerprint.rs  hardware.rs  journal.rs  mock_hardware.rs  mod.rs  symbolic.rs  tests.rs
src/parallel/: batch.rs  merge.rs  mod.rs  sharded.rs
src/persistence/: journal.rs  mod.rs  recovery.rs  snapshot.rs
src/pipeline/: builder.rs  mod.rs
src/reference/: mod.rs  simple_memory.rs
src/retrieval/: attribution.rs  direct.rs  mod.rs  resonator.rs  resonator_retriever.rs  temperature.rs
src/store/: mod.rs  sharded.rs  simple.rs  trace.rs
tests/: algebraic_laws.rs
tests/integration/: end_to_end.rs
