[package]
name = "minuet"
version = "0.1.0"
edition = "2021"
# Requires nightly for amari-gpu compatibility
# rust-version = "nightly"
description = "Extended memory systems built on amari-holographic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/industrial-algebra/minuet"
documentation = "https://docs.rs/minuet"
keywords = ["holographic", "memory", "vsa", "hyperdimensional", "associative"]
categories = ["data-structures", "science", "algorithms"]

[dependencies]
# Core holographic types (required)
# Provides: BindingAlgebra, HolographicMemory, Resonator, algebras
amari-holographic = { version = "0.12", features = ["serialize"] }

# Utilities
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
num-traits = "0.2"

# Optional: parallelism
rayon = { version = "1.10", optional = true }

# Optional: serialization
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Optional: persistence
rocksdb = { version = "0.22", optional = true }

# Optional: async
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-case = "3.3"
approx = "0.5"
tempfile = "3.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
rand_chacha = "0.3"

[features]
default = ["std"]
std = []
parallel = ["rayon", "amari-holographic/parallel"]
serde = ["dep:serde", "bincode", "amari-holographic/serialize"]
persistence = ["rocksdb", "serde"]
async = ["tokio"]
full = ["parallel", "serde", "persistence", "async"]

# Benchmarks and examples will be added in Phase 6
# [[bench]]
# name = "binding_throughput"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
