[package]
name = "minuet"
version = "0.2.0"
edition = "2021"
# Requires nightly for amari-gpu compatibility
description = "Holographic memory systems built on amari-holographic — the optical table for holographic computing"
license = "AGPL-3.0-only"
repository = "https://github.com/industrial-algebra/Minuet"
documentation = "https://docs.rs/minuet"
keywords = ["holographic", "memory", "vsa", "hyperdimensional", "associative", "optical"]
categories = ["data-structures", "science", "algorithms"]

[dependencies]
# Core holographic types (required)
# Provides: BindingAlgebra, HolographicMemory, Resonator, algebras
amari-holographic = { version = "0.15", features = ["serialize"] }

# Utilities
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
num-traits = "0.2"

# Optional: parallelism
rayon = { version = "1.10", optional = true }

# Optional: serialization
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Optional: optical backend
ordered-float = { version = "4.5", features = ["serde"], optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }

# Optional: persistence (WIP — requires C++ build tools for RocksDB)
rocksdb = { version = "0.22", optional = true }

# Optional: async
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-case = "3.3"
approx = "0.5"
tempfile = "3.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
default = ["std"]
std = []
parallel = ["rayon", "amari-holographic/parallel"]
serde = ["dep:serde", "bincode", "amari-holographic/serialize"]
persistence = ["rocksdb", "serde"]
async = ["tokio"]
optical = ["serde", "ordered-float", "rand", "rand_chacha"]
# NOTE: persistence is excluded from full because it requires C++ build tools
full = ["parallel", "serde", "async", "optical"]

# Examples with feature requirements
[[example]]
name = "optical_memory_demo"
required-features = ["optical"]

[[example]]
name = "optical_fingerprint_demo"
required-features = ["optical"]

[[example]]
name = "optical_expressions_demo"
required-features = ["optical"]

# Benchmarks
[[bench]]
name = "holographic_ops"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
